@@ -1,40 +1,74 @@
 package com.StudyMate.StudyMate.sercurity;
 
+import com.StudyMate.StudyMate.repository.UserAuthenticationRepository;
+import com.StudyMate.StudyMate.sercurity.filter.GoogleJWTValidatorFilter;
+import com.StudyMate.StudyMate.sercurity.filter.JWTGeneratorFilter;
+import com.StudyMate.StudyMate.sercurity.filter.JWTValidatorFilter;
+import com.StudyMate.StudyMate.service.UserService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class WebSecurityConfig {
-    /**
-     * TODO: the current authorisation rules are temporary (it accepts all paths), update it later to require authorisation
-     * to some paths
-     */
+
+
     @Bean
-    SecurityFilterChain configureSecurity(HttpSecurity http) throws Exception {
-        http.cors(Customizer.withDefaults())
+    SecurityFilterChain configureSecurity(HttpSecurity http, UserAuthenticationRepository userAuthenticationRepository, GoogleTokenVerifierService tokenVerifierService) throws Exception {
+        http.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+        http.csrf(csrf -> csrf.disable())
+                .cors(Customizer.withDefaults())
                 .authorizeHttpRequests((authorize) -> authorize
-                        .requestMatchers("/**").permitAll()
-                );
+                        .requestMatchers("/authenticate", "/favouriteBackground/**", "/flashcard/**", "/flashcardSet/**").authenticated()
+                        .requestMatchers("/user/**").hasRole("ADMIN")
+                        .anyRequest().permitAll()
+                )
+                .httpBasic(Customizer.withDefaults())
+                .formLogin(Customizer.withDefaults())
+                .addFilterBefore(new JWTValidatorFilter(), BasicAuthenticationFilter.class)
+                .addFilterAfter(new JWTGeneratorFilter(), BasicAuthenticationFilter.class)
+                .addFilterBefore(new GoogleJWTValidatorFilter(tokenVerifierService, userAuthenticationRepository), BasicAuthenticationFilter.class);
+
+
         return http.build();
     }
+
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST"));
+        configuration.setAllowCredentials(true);
+        configuration.setAllowedHeaders(Collections.singletonList("*"));
+        configuration.setExposedHeaders(List.of("Authorization")); // tell the front-end to except the response with Authorization in header
+        configuration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    UserDetailsService userDetailsService(UserAuthenticationRepository repository) {
+        return email -> repository.findUserByEmail(email).asUser();
+    }
+    @Bean
+    PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
     }
 }
